# teams-agent

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/teams_agent/: __init__.py  ai_responder.py  cli.py  config.py  daemon.py  graph_client.py  ignore_list.py  models.py  telegram_notifier.py
tests/: test_graph_client.py
